--- a/languages/man-admin-fr_FR.po
+++ b/languages/man-admin-fr_FR.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-10 12:04+0200\n"
-"PO-Revision-Date: 2015-09-10 12:06+0100\n"
+"POT-Creation-Date: 2015-09-15 11:24+0200\n"
+"PO-Revision-Date: 2015-09-15 11:34+0100\n"
 "Last-Translator:  <acianfa@gmail.com>\n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -34,6 +34,7 @@ msgid "Edit"
 msgstr "Modifier"
 
 #: class.manadmin-admin.php:29 class.manadmin-admin.php:42
+#: class.manadmin-admin.php:75
 msgid "You do not have sufficient permissions to access this page."
 msgstr "Vous n'avez pas les permissions suffisantes pour accéder à cette page."
 
@@ -52,3 +53,35 @@ msgstr "Choisir"
 #: views/edit-layout.php:56
 msgid "Load"
 msgstr "Charger"
+
+#: class.manadmin-admin.php:39 views/edit-layout.php:75
+msgid "Stop recording"
+msgstr "Arrêter l'enregistrement"
+
+#: class.manadmin-admin.php:39 views/edit-layout.php:79
+msgid "Record now"
+msgstr "Lancer l'enregistrement"
+
+#: class.manadmin-admin.php:39 views/edit-layout.php:86
+msgid "Browse in a new window"
+msgstr "Naviguer dans une nouvelle fenêtre"
+
+#: class.manadmin-admin.php:41
+msgid "Click on "
+msgstr "Cliquer sur"
+
+#: class.manadmin-admin.php:42
+msgid "Press "
+msgstr "Appuyer sur"
+
+#: views/edit-layout.php:66
+msgid "Automatic content"
+msgstr "Contenu automatique"
+
+#: views/edit-layout.php:95
+msgid ""
+"Here you can open a new window and record all your actions in the manual "
+"text area"
+msgstr ""
+"Cet outil vous permet d'enregistrer dans le manuel toutes les actions que "
+"vous allez effectuer en navigant dans l'espace d'administration"
