--- a/languages/man-admin-fr_FR.po
+++ b/languages/man-admin-fr_FR.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-15 11:24+0200\n"
-"PO-Revision-Date: 2015-09-15 11:34+0100\n"
+"POT-Creation-Date: 2015-09-20 10:14+0200\n"
+"PO-Revision-Date: 2015-09-20 10:20+0100\n"
 "Last-Translator:  <acianfa@gmail.com>\n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -33,26 +33,9 @@ msgstr "Editer le manuel"
 msgid "Edit"
 msgstr "Modifier"
 
-#: class.manadmin-admin.php:29 class.manadmin-admin.php:42
-#: class.manadmin-admin.php:75
+#: class.manadmin-admin.php:29 class.manadmin-admin.php:108
 msgid "You do not have sufficient permissions to access this page."
 msgstr "Vous n'avez pas les permissions suffisantes pour accéder à cette page."
-
-#: views/edit-layout.php:39
-msgid "Save"
-msgstr "Enregistrer"
-
-#: views/edit-layout.php:45
-msgid "Load old version"
-msgstr "Charger ancienne version"
-
-#: views/edit-layout.php:48
-msgid "Select"
-msgstr "Choisir"
-
-#: views/edit-layout.php:56
-msgid "Load"
-msgstr "Charger"
 
 #: class.manadmin-admin.php:39 views/edit-layout.php:75
 msgid "Stop recording"
@@ -66,13 +49,37 @@ msgstr "Lancer l'enregistrement"
 msgid "Browse in a new window"
 msgstr "Naviguer dans une nouvelle fenêtre"
 
-#: class.manadmin-admin.php:41
-msgid "Click on "
+#: class.manadmin-admin.php:83
+msgid "Click on"
 msgstr "Cliquer sur"
 
-#: class.manadmin-admin.php:42
-msgid "Press "
+#: class.manadmin-admin.php:92
+msgid "In the drop-down list"
+msgstr "Dans la liste déroulante"
+
+#: class.manadmin-admin.php:92
+msgid "select "
+msgstr "Choisir"
+
+#: class.manadmin-admin.php:100
+msgid "Press"
 msgstr "Appuyer sur"
+
+#: views/edit-layout.php:39
+msgid "Save"
+msgstr "Publier"
+
+#: views/edit-layout.php:45
+msgid "Load old version"
+msgstr "Charger ancienne version"
+
+#: views/edit-layout.php:48
+msgid "Select"
+msgstr "Choisir"
+
+#: views/edit-layout.php:56
+msgid "Load"
+msgstr "Charger"
 
 #: views/edit-layout.php:66
 msgid "Automatic content"
