Improved compatibilities with chrome

--- a/languages/man-admin-fr_FR.po
+++ b/languages/man-admin-fr_FR.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-20 10:14+0200\n"
-"PO-Revision-Date: 2015-09-20 10:20+0100\n"
+"POT-Creation-Date: 2015-09-20 18:29+0200\n"
+"PO-Revision-Date: 2015-09-20 18:30+0100\n"
 "Last-Translator:  <acianfa@gmail.com>\n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -33,7 +33,7 @@ msgstr "Editer le manuel"
 msgid "Edit"
 msgstr "Modifier"
 
-#: class.manadmin-admin.php:29 class.manadmin-admin.php:108
+#: class.manadmin-admin.php:29 class.manadmin-admin.php:112
 msgid "You do not have sufficient permissions to access this page."
 msgstr "Vous n'avez pas les permissions suffisantes pour accéder à cette page."
 
@@ -88,7 +88,8 @@ msgstr "Contenu automatique"
 #: views/edit-layout.php:95
 msgid ""
 "Here you can open a new window and record all your actions in the manual "
-"text area"
+"text area. <b>Firefox</b> is recommanded."
 msgstr ""
 "Cet outil vous permet d'enregistrer dans le manuel toutes les actions que "
-"vous allez effectuer en navigant dans l'espace d'administration"
+"vous allez effectuer en navigant dans l'espace d'administration.<b>Firefox</"
+"b> est recommandé."
