Compatibility with Chrome for actions recorder

--- a/languages/man-admin.pot
+++ b/languages/man-admin.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-20 18:29+0200\n"
+"POT-Creation-Date: 2015-09-21 13:14+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -88,5 +88,5 @@ msgstr ""
 #: views/edit-layout.php:95
 msgid ""
 "Here you can open a new window and record all your actions in the manual "
-"text area. <b>Firefox</b> is recommanded."
+"text area"
 msgstr ""
